<resources>

    <string name="HTTPSUCCESS">HTTPSUCCESS</string>
    <string name="HTTPERROR">HTTPERROR</string>
    <string name="TheServer">http://45.32.84.43:8080/ExpressHelpServce/</string>
    <string name="VirtualTheServer">http://10.0.2.2:1111/ExpressHelpServce/</string>

    <string name="app_name">快递帮</string>
    <string name="normal_user_login_title">用户登录</string>
    <string name="register_new_user_title">新用户注册</string>
    <string name="pay_order_title">支付订单</string>
    <string name="modify_information_title">修改个人信息</string>
    <string name="admin_user_login_title">管理员登录</string>
    <string name="username_edit_hint">请输入电话号码</string>
    <string name="admin_username_edit_hint">请输入管理员账户名</string>
    <string name="password_edit_hint">请输入密码</string>
    <string name="login">登录</string>
    <string name="register_account"><u>未有账号？点击注册</u></string>
    <string name="forget_password">忘记密码</string>
    <string name="into_admin_login">管理员登录</string>
    <string name="temp_time">00:00</string>


    <string name="home">首页</string>
    <string name="message">消息</string>
    <string name="my_info">我的</string>
    <string name="into_submit_order">发布订单</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入关键词</string>

    <string name="my_orders">我的订单</string>
    <string name="watch_all_orders">查看全部订单</string>
    <string name="pending_payment">待支付</string>
    <string name="pending_order">待接单</string>
    <string name="pending_received">待收货</string>
    <string name="accomplish">已完成</string>
    <string name="delivery_orders">跑手订单</string>
    <string name="pending_pick_up">待取货</string>
    <string name="delivery">送货中</string>

    <string name="order">订单</string>
    <string name="address">地址：</string>
    <string name="express_position">快递点：</string>
    <string name="money">金额：</string>
    <string name="details">查看详情</string>
    <string name="express_name">快递名：</string>
    <string name="receiver_address">收货地址：</string>
    <string name="receiver_name">收货人姓名：</string>
    <string name="receiver_telephone">收货人电话：</string>
    <string name="pick_up_code">取货码：</string>
    <string name="arrive_time">送达时间：</string>
    <string name="first_start_time">第一个起始时间：</string>
    <string name="first_end_time">第一个结束时间：</string>
    <string name="second_start_time">第二个起始时间：</string>
    <string name="second_end_time">第二个结束时间：</string>
    <string name="money_unit">￥</string>

    <string name="username_tv">用户名：</string>
    <string name="temp_username">弹指尘梦空山语</string>
    <string name="id_tv">id：</string>
    <string name="temp_id">123456789</string>
    <string name="sex_tv">性别：</string>
    <string name="temp_sex">男</string>

    <string name="submit_times">发布任务次数：</string>
    <string name="accept_times">接受任务次数：</string>
    <string name="runner_grade">跑手评分：</string>
    <string name="runner_telephone">电话号码：</string>
    <string name="user_credit">用户信誉度：</string>
    <string name="more_info">更多信息</string>
    <string name="send_message">发消息</string>

    <string name="modify_order">修改订单</string>
    <string name="confirm_payment">确认支付</string>

    <string name="confirm_modify">确认修改</string>

    <string name="setting">设置</string>

    <string name="current_user">当前用户：</string>

    <string name="exit_current_account">退出当前账号</string>

    <string name="current_balance">当前余额：</string>

    <string name="temp_balance">10.0￥</string>

    <string name="top_up">充值</string>

    <string name="modify_admit">上传信息</string>
    <string name="arrived">已送达</string>
    <string name="finishd">已完成</string>

    <string name="order_detail">订单详情</string>

    <string name="accomplish_text">您已从跑手手中完成取件，感谢您使用本软件，期待再次为您服务。</string>
    <string name="runner_accomplish_text">用户已确认收货，感谢您使用本软件，期待再次为您服务。</string>
    <string name="order_info">订单信息</string>

    <string name="take_time">取货时间</string>

    <string name="first_take_time">第一个时间段</string>
    <string name="second_take_time">第二个时间段</string>
    <string name="temp_money">￥5.00</string>
    <string name="submit_time">订单创建时间</string>
    <string name="order_id">订单编号</string>
    <string name="runner_info">跑手信息</string>
    <string name="user_info">用户信息</string>
    <string name="pending_payment_status">您的订单尚未支付哦</string>
    <string name="pending_receive_status">您的订单还未有跑手接收，请耐心等待</string>
    <string name="pending_take_status">跑手正在路途中，请耐心等待</string>
    <string name="accomplish_order_status">交易成功</string>

    <string name="delete_order">删除订单</string>

    <string name="my_specific_info">个人详情</string>

    <string name="delivering_status">您已接单，请在规定时间内送达哦</string>
    <string name="arrived_status">您已送达，请耐心等待用户确认</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>

    <string name="start_text">跑手正马不停蹄的向您赶来呢</string>

    <array name="express_name_list">
        <item>申通快递</item>
        <item>中通快递</item>
        <item>圆通快递</item>
        <item>韵达快递</item>
        <item>百世快递</item>
        <item>天天快递</item>
        <item>顺丰快运</item>
        <item>EMS邮政</item>
        <item>天猫</item>
        <item>京东快递</item>
    </array>
</resources>
