<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/setting"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:clickable="true"
        android:background="@drawable/layout_selector">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/head_image"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:src="@drawable/temp_head2"
            android:layout_gravity="center"/>
        <LinearLayout
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="10"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <LinearLayout
                android:padding="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/current_user"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="@string/temp_username"
                    android:textStyle="bold"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:padding="6dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/id_tv"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/temp_id"/>
            </LinearLayout>


        </LinearLayout>
        <Button
            android:id="@+id/to_modify_myinfo"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="6dp"
            android:layout_width="0dp"
            android:layout_weight="1.2"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/head_btn_selector"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:background="@drawable/layout_selector"
        android:layout_marginTop="20dp"
        android:padding="8dp"
        >

        <TextView
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_balance"
            android:textColor="@color/black"
            android:textSize="20sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/balance"
            android:text="@string/temp_balance"
            android:textColor="@color/black"/>

        <RelativeLayout
            android:id="@+id/top_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/top_up"
                android:layout_toLeftOf="@+id/top_up_arrow"
                android:layout_marginRight="6dp"/>
            <Button
                android:id="@+id/top_up_arrow"
                android:layout_marginRight="6dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/head_btn_selector"/>
        </RelativeLayout>

    </LinearLayout>

    <Button
        android:id="@+id/logout"
        android:layout_marginTop="20dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:background="@drawable/circular_btn"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:text="@string/exit_current_account"/>

</LinearLayout>