<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/top_up"
        android:textSize="26sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:layout_marginBottom="22dp"/>
    <RelativeLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/money_unit"
            android:layout_marginLeft="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/money"
                android:textSize="22sp"
                android:gravity="center_vertical"
                android:layout_margin="5dp" />
            <EditText
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="22sp"
                android:layout_toLeftOf="@+id/money_unit"/>
        </LinearLayout>
        <TextView
            android:layout_marginTop="10dp"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="10dp"
            android:id="@+id/money_unit"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:text="@string/money_unit"
            android:layout_alignParentRight="true"
            android:gravity="center_vertical"
            android:textSize="22sp" />


    </RelativeLayout>
    <RelativeLayout
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp">
        <Button
            android:id="@+id/confirm"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/confirm"
            android:background="@drawable/item_button"
            android:textSize="18sp"
            android:textColor="@color/deep_grey"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            style="?android:attr/borderlessButtonStyle"/>
        <Button
            android:id="@+id/cancel"
            android:layout_width="80dp"
            android:layout_height="30dp"
            android:text="@string/cancel"
            android:textSize="18sp"
            android:background="@drawable/item_button"
            android:textColor="@color/deep_grey"
            android:layout_toLeftOf="@+id/confirm"
            android:layout_marginRight="20dp"
            style="?android:attr/borderlessButtonStyle"/>
    </RelativeLayout>

</LinearLayout>
