<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/express_name"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/submit_order_tv_bg"/>
        <TextView
            android:id="@+id/express_name"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/submit_order_et_bg"
            android:layout_marginRight="10dp"
            android:singleLine="true"
            android:text="中通快递"
            android:textSize="18sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/receiver_address"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/submit_order_tv_bg"/>
        <EditText
            android:id="@+id/get_address"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/submit_order_et_bg"
            android:layout_marginRight="10dp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/receiver_name"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/submit_order_tv_bg"/>
        <EditText
            android:id="@+id/take_name"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/submit_order_et_bg"
            android:layout_marginRight="10dp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/receiver_telephone"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/submit_order_tv_bg"/>
        <EditText
            android:id="@+id/take_telephone"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/submit_order_et_bg"
            android:layout_marginRight="10dp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/pick_up_code"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/submit_order_tv_bg"/>
        <EditText
            android:id="@+id/take_code"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="@drawable/submit_order_et_bg"
            android:layout_marginRight="10dp"
            android:singleLine="true"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/money"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            android:background="@drawable/submit_order_tv_bg"
            android:singleLine="true"/>
        <EditText
            android:id="@+id/money"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:background="@drawable/submit_order_et_bg"
            android:singleLine="true"
            android:layout_weight="8"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/money_unit"
            android:textSize="18sp"
            android:layout_marginRight="10dp"
            android:layout_gravity="center"
            android:background="@drawable/subimt_order_tv_right_bg"
            android:layout_weight="2"/>
    </LinearLayout>

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="38dp"
        android:padding="5dp"
        android:text="@string/arrive_time"
        android:textSize="18sp"
        android:layout_marginLeft="10dp"
        android:layout_gravity="center" />

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circular_shape_small"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/first_start_time"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/first_start_time"
            android:hint="@string/temp_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="right"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circular_shape_small"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/first_end_time"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/first_end_time"
            android:hint="@string/temp_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circular_shape_small"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/second_start_time"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/second_start_time"
            android:hint="@string/temp_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="right"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/circular_shape_small"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="38dp"
            android:padding="5dp"
            android:text="@string/second_end_time"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_gravity="center"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:id="@+id/second_end_time"
            android:hint="@string/temp_time"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:gravity="right"
            />
    </LinearLayout>

</LinearLayout>
