<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        >
        <TextView
        android:id="@+id/toolbar_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/home"
        android:textSize="25dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <TextView
            android:id="@+id/tv_search_conform"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="3"
            android:background="@drawable/search_btn_backcolor"
            android:gravity="center"
            android:text="@string/search"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/et_search_key"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="8"
            android:background="@drawable/search_et_backcolor"
            android:hint="@string/search_hint"
            android:paddingLeft="10dp"
            android:singleLine="true"/>

        <Button
            android:id="@+id/submit_order"
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="3"
            android:text="@string/into_submit_order"
            android:textColor="@color/white"
            android:background="@drawable/submit_order_backcolor"/>



    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v4.widget.SwipeRefreshLayout
            android:id="@+id/swipe_refresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/order_brief_recycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </android.support.v7.widget.RecyclerView>
        </android.support.v4.widget.SwipeRefreshLayout>

    </LinearLayout>

</LinearLayout>